--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tetris",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.5",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.0.11",
     "date-fns": "^2.14.0",
     "pouchdb-browser": "^7.2.1",
@@ -19,6 +19,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "^14.4",
+    "npm": "^6.14"
   },
   "eslintConfig": {
     "extends": "react-app"
